waybar: fix invisible icons on existent workspaces

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -24,6 +24,7 @@ window#waybar.chromium {
 }
 
 #workspaces button {
+    color: #dfdfdf;
     padding: 0 0px;
 }
 
